# dotg_rust

./: Cargo.toml  Dockerfile
DOTG_Postgre/: Script.sql
src/: app_state.rs  auth.rs  global_vars.rs  main.rs
src/controllers/: friend_controller.rs  game_server_controller.rs  in_game_controller.rs  lobby_controller.rs  mod.rs  user_controller.rs  web_socket_controller.rs
src/models/: friend.rs  game_server.rs  in_game.rs  lobby.rs  mod.rs  user.rs
