[package]
name = "dotg_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"]}
dotenvy = "0.15.7"
futures-util = "0.3.31"
regex = "1.11.3"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"]}
tokio = { version = "1.47.1", features = ["full"] }
