[package]
name = "dotg_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"]}
axum-extra = { version = "0.12.3", features = ["typed-header"]}
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
redis = { version = "1.0.2", features = ["aio", "tokio-comp"]}
redis-macros = "1.0.1"
regex = "1.11.3"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"]}
tokio = { version = "1.47.1", features = ["full"] }
